-*- mode:flyspell; -*-

$Id$

Changes since v1.11
===================

o Published the OnDragOver and OnDragDrop events of the entry viewer
  component.

o Added methods for reloading the header and the menus of a guide.

Changes since v1.10
===================

o Added the TypeName property to TwegLibNGEntry.

o Made TwegLibNGEntryViewer.hasEntry() public.

o Added the BOLSearchFirstInShorts property to the TwegLibNGEntryFind
  component. Setting this to True makes the search system work something
  similar to the search system in the original NG.exe.

Changes since v1.9
==================

o Modified the line parsing code so that if a colour attribute is in effect
  and a new attribute marker of the same value is seen it reverts to the
  normal text colour.

o Modified the TFileStream oriented functions in wegLibUtils.pas so that
  they work on a TStream instead of a TFileStream.

o Modified the Entry, Menu and See-Also classes so that they work on TStream
  rather than TFileStream.

o Increased the max read line length from 512 to 1024 to stay consistent
  with the limits mentioned in the Expert Help Compiler manual.

o Limited the max number of read see-also entries to 20 to stay consistent
  with the limits mentioned in the Expert Help Compiler manual. This change
  also helps guard against corrupt guides.

Changes since v1.8 
==================

o Modified the entry viewer component so that it doesn't create and free a
  painter for each draw action. Instead just create the painters once and
  reuse them.

o Modified the entry class so that it doesn't create and free a line
  stripper object for each line in the entry. Instead just create the
  stripper once and reuse it.

o Modified wegLibExpand() so that it tries to do something sensible if an
  author of a guide has used two consecutive "hard spaces" (which would
  result in 255 spaces being inserted when the author probably wanted two
  consecutive spaces).

Changes since v1.7
==================
